updated authentication method